get table rows to display in table for each object

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                         <th>Item</th>
                         <th>Description</th>
                         <th>Amount</th>
-                        <th>Actions</th>
+                        <!-- <th>Actions</th> -->
                     </tr>
                 </thead>
                 <tbody id="inventory"></tbody>
